--- a/public/css/front.css
+++ b/public/css/front.css
@@ -1,14 +1,15 @@
 .navbar-brand img {
     width: 80px;
   }
-  .navbar-nav {
+  /* .navbar-nav {
     align-items: center;
-  }
+  } */
   .navbar .navbar-nav .nav-link {
-    color: #fff;
+    /* color: #fff; */
     font-size: 1.1em;
     padding: 0.5em 1em;
   }
+
   @media screen and (min-width: 768px) {
     .navbar-brand img {
       width: 100px;
