--- a/public/css/front.css
+++ b/public/css/front.css
@@ -18,8 +18,12 @@
     display: inline-block;
     margin-left: 15px;
 }
+.especial{
+  :hover{
+    cursor: pointer;
+  }
 
-
+}
 
   @media screen and (min-width: 768px) {
     .navbar-brand img {
